tests/run-pass/typeck/assign-ops.rs
fn main() {
    let a: bool = false;
    let b: int = 0;

    a &= true;
    b &= 2;
}