tests/compile-fail/typeck/invalid-let.rs
fn main() {
    let a: int = false;  //! ERROR(2:18): type mismatch: expected int, got bool
}